--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,7 +3,27 @@
   --secondary-color: #31333B;    
 }
 
+html {
+  font-size: 62.5%;
+
+body{
+  font-family: "Lucida Sans", sans-serif;
+  display: flex;
+  margin: 0;
+  color: #E7E7E7;
+  min-height: 100vh;
+}
+
 .main-header{
-    width: 260px;
+    flex: 0 0 26rem
     background-color: var(--secondary-color);
+}
+
+.main {
+    flex: 1;
+    background-color: #444856;
+}
+
+a {
+  color: inherit;
 }
