--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,7 @@
 :root{
   --primary-color: #FC7833;
   --secondary-color: #31333B;    
+  --secondary-color-light: #444856;
 }
 
 html {
@@ -20,10 +21,42 @@ body{
 }
 
 .main {
-    flex: 1;
-    background-color: #444856;
+    flex: 1 0;
+    background-color:  var(--secondary-color-light);
 }
 
 a {
   color: inherit;
 }
+
+.main, .main-header {
+  font-size: 1.6rem;
+}
+
+.perfil-img {
+  max-widht: 10rem;
+}
+
+.main-nav {
+  padding: 6.5rem 2.4rem 2.4rem;
+}
+
+.main-nav ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.main-nav ul a {
+  display: block;
+  padding: 1.2rem 0;
+  text-decoration: none;
+  transition: padding-right .2s, background-color .4s;
+  background-color: transparent;
+}
+
+.main-nav ul a:hover {
+  background-color: var(--secondary-color-light);
+  padding-right: 1rem;
+}
+
+
