--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,40 +1,35 @@
-:root{
-  --primary-color: #FC7833;
-  --secondary-color: #31333B;    
-  --secondary-color-light: #444856;
-}
-
 html {
   font-size: 62.5%;
+}
 
-body{
+body {
   font-family: "Lucida Sans", sans-serif;
   display: flex;
-  margin: 0;
-  color: #E7E7E7;
+  color: #e7e7e7;
   min-height: 100vh;
 }
 
-.main-header{
-    flex: 0 0 26rem
-    background-color: var(--secondary-color);
+.main-header {
+  flex: 0 0 26rem;
+  background-color: var(--secondary-color);
 }
 
 .main {
-    flex: 1 0;
-    background-color:  var(--secondary-color-light);
+  flex: 1 0;
+  background-color: var(--secondary-color-light);
 }
 
 a {
   color: inherit;
 }
 
-.main, .main-header {
+.main,
+.main-header {
   font-size: 1.6rem;
 }
 
 .perfil-img {
-  max-widht: 10rem;
+  max-width: 10rem;
 }
 
 .main-nav {
@@ -43,14 +38,14 @@ a {
 
 .main-nav ul {
   padding: 0;
-  list-style-type: none;
+  
 }
 
 .main-nav ul a {
   display: block;
   padding: 1.2rem 0;
   text-decoration: none;
-  transition: padding-right .2s, background-color .4s;
+  transition: padding-right 0.2s, background-color 0.4s;
   background-color: transparent;
 }
 
@@ -58,5 +53,3 @@ a {
   background-color: var(--secondary-color-light);
   padding-right: 1rem;
 }
-
-
