--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,11 +11,16 @@ body {
 
 h1 {
   font-size: 4rem;
-  color: #7B7B7B;
-  margin-top: 2.4rem;
+  color: #7b7b7b;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
 }
 
-h2, h3, h4, h5, h6 {
+h2,
+h3,
+h4,
+h5,
+h6 {
   background-color: var(--primary-color-light);
 }
 
@@ -44,16 +49,20 @@ a {
 }
 
 .main-nav {
-  text-aling: right;
+  text-align: right;
   padding: 6.5rem 2.4rem 2.4rem;
 }
 
 .main-nav ul {
   padding: 0;
-  
 }
 
-.main-nav ul a {
+.main-nav li {
+  border-bottom: 1px solid #7b7b7b;
+  padding: 0.4rem 0;
+}
+
+.main-nav ul li a {
   display: block;
   padding: 1.2rem 0;
   text-decoration: none;
@@ -66,7 +75,4 @@ a {
   padding-right: 1rem;
 }
 
-.main-nav li {
-  border-bottom: 1px solid #7B7B7B;
-  padding: .4rem 0;
-}
+
