Atualizar o index.css
Update CSS/índex.css

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -73,6 +73,7 @@ a {
 .main-nav ul a:hover {
   background-color: var(--secondary-color-light);
   padding-right: 1rem;
+  border: 1px solid;
 }
 
 
